<resources>
    <string name="app_name">My Application</string>
    <string name="Todays_Collection_Summary">Todays Collection Summary</string>
    <string name="Buffalo_Milk">Buffalo Milk</string>
    <string name="_0">0</string>
    <string name="select">Select</string>
    <string name="Cow_Milk">Cow Milk</string>
    <string name="Avg_Fat">Avg Fat</string>
    <string name="Avg_Snf">Avg Snf</string>
    <string name="Total_Milk">Total Milk</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Farmer_Entry">Farmer Entry</string>
    <string name="Farmer_Code">Farmer Code</string>
    <string name="Farmer_Name">Farmer Name</string>
    <string name="Enter_Farmer_Code_Here">Enter Farmer Code Here..,</string>
    <string name="Enter_Farmer_Name_Here">Enter Farmer Name Here..,</string>
    <string name="Mobile_No">Mobile No.</string>
    <string name="Enter_Mobile_No_Here">Enter Mobile No. Here..,</string>
    <string name="Milk_Type">Milk Type</string>
    <string name="customer_type">Customer Type</string>
    <string name="Rate_Type">Rate Type</string>
    <string name="Select_Rate_Type">Select Rate Type</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Back">Back</string>
    <string name="Next">Next</string>
    <string name="Register">Register</string>
    <string name="create_account">Create account</string>
    <string name="your_name">Your name</string>
    <string name="contact_number">Contact Number</string>
    <string name="branch_name">Branch Name</string>
    <string name="address">Address</string>
    <string name="email_address">Email_address</string>
    <string name="amount">Amount</string>
    <string name="remarks_reason">Remarks / Reason</string>
    <string name="select_date">Select Date</string>
    <string name="select_advance_for">Select advance for Customer / </string>
    <string name="select_type">Select Type</string>
    <string name="select_Customer_or_farmer">Select Farmer / Customer</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="customer_code">Customer Code</string>
    <string name="customer_name">Customer Name</string>
    <string name="active">Active Status</string>
    <string name="Customers">Customers</string>
    <string name="Collections">Collections</string>
    <string name="Farmers">Farmers</string>
    <string name="Rates">Rates</string>
    <string name="Advance">Advance</string>
    <string name="Reports">Reports</string>
    <string name="Sale">Sale</string>
    <string name="RegisterNotice">Register Notice</string>
    <string name="ForgetPassword">Forget Password</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="save">Save</string>
    <string name="newpassword">New Password</string>
    <string name="trail">Trail Period : 10 Days  -  ₹0.0</string>
    <string name="standard">Standard Plan : 1 Year  -  ₹1000.0</string>
    <string name="trailsummary">* 20 Active Farmers \n* 1 Cow RateChart\n* 1 Buffalo RateChart\n* Thermal Bluetooth Print</string>
    <string name="standardsummary">* 200 Active Farmers \n* 1 Cow RateChart\n* 1 Buffalo RateChart\n* Thermal Bluetooth Print</string>
    <string name="registernotice1">This application is Developed for Milk Collection Dairy/Center Owners Only. with this application, Owner can manage Dairy Account including Daily Milk Collection, Cattle Feed, Advance/Loan, Farmer Payments. \n \nNote: This application is not useful for Others.</string>
    <string name="Enter_Milk_Type_Here">Enter Milk Type Here..,</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_user">Create User</string>
    <string name="conform_password">Conform Password</string>
    <string name="sign_in_to_continue">Sign in to Continue...</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="dairy_app_login">Dairy App Login</string>
    <string name="Password_hint">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sendotp">Send OTP</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="products">product</string>
    <string name="mini_statement">mini</string>
    <string name="orders">ord</string>
    <string name="milk">milk</string>
    <string name="mobileno">Mobile No.</string>
    <string name="enternewpassword">New Password</string>
    <string name="enterconfirmpassword">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dashboard">Dashboard</string>
    <string name="menu">Menu</string>
    <string name="full_screen">Full Screen</string>
    <string name="switch_to_valuehiend">switch to valuehiend</string>
    <string name="switch_to_volume">switch to volume</string>
    <string name="Location">Location</string>
    <string name="settings">Settings</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="fatmin">FAT MIN</string>
    <string name="fatmax">FAT MAX</string>
    <string name="snfmin">SNF MIN</string>
    <string name="snfmax">SNF MAX</string>
    <string name="fatsnfmin">FAT &amp; SNF MIN</string>
    <string name="fatsnfmax">FAT &amp; SNF MAX</string>
    <string name="rate">Rate</string>
    <string name="edit">Edit</string>
    <string name="deviceid">Device Id</string>
    <string name="delete">Delete</string>
    <string name="action">Action</string>
    <string name="detailid">id</string>
    <string name="version">version</string>
    <string name="warning">Warning !</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="do_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="Settings">Settings</string>
    <string name="add_advnace">Add Advance</string>
    <string name="add_customer">Add Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="edit_farmer">Edit Farmer</string>



</resources>