<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtRegister"
        android:text="@string/RegisterNotice"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/sp30"
        android:layout_weight="1"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtregister1"
            android:text="@string/registernotice1"
            android:textSize="@dimen/sp20"
            android:layout_weight="1"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txttrail"
            android:text="@string/trail"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txttrailsummary"
            android:text="@string/trailsummary"
            android:textSize="@dimen/sp20"
            android:layout_margin="@dimen/dp10"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtstandard"
            android:text="@string/standard"
            android:textSize="@dimen/sp20"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtstandardsummary"
            android:text="@string/standardsummary"
            android:textSize="@dimen/sp20"
            android:layout_margin="@dimen/dp10"
            />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Back"
            android:textStyle="bold"
            android:id="@+id/back"
            android:textSize="@dimen/sp20"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Next"
            android:textStyle="bold"
            android:id="@+id/next"
            android:textSize="@dimen/sp20"
            />
    </LinearLayout>
</RelativeLayout>
</layout>