<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fat"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/tvfatmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp5"
                android:text="@string/fatmin"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_weight="1"
                app:fontFamily="@font/montserrat_medium" />
                <TextView
                    android:id="@+id/tvfatmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp5"
                    android:text="@string/fatmax"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    app:fontFamily="@font/montserrat_medium" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/snf"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvsnfmin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp5"
                    android:text="@string/snfmin"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    app:fontFamily="@font/montserrat_medium" />
                <TextView
                    android:id="@+id/tvsnfmax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp5"
                    android:text="@string/snfmax"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_weight="1"
                    app:fontFamily="@font/montserrat_medium" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/borderlinecolor" />

        <TextView
            android:id="@+id/tvrate"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rate"
            android:textColor="@color/app_color"
            android:textStyle="bold"
            android:textSize="18sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/borderlinecolor" />

        <ImageView
            android:id="@+id/ivedit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:src="@drawable/baseline_edit_24" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:background="@color/borderlinecolor" />

        <ImageView
            android:id="@+id/ivdelte"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_delete_24" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:visibility="gone"
        android:id="@+id/borderLine"
        android:background="@color/borderlinecolor" />

</RelativeLayout>
</layout>